# tjurm2025-test1

./: CMakeLists.txt  main.cpp
include/: ArmorPlate.h
src/: ArmorPlate.cpp  main.cpp  tests.cpp
